# create-gnome-project

./: .gitignore  Makefile  README.md  main.c  makefile
DEBIAN/: control
debian/: changelog  control  rules
helpers/: cgp_args.c  cgp_args.h  cgp_errors.c  cgp_errors.h  cgp_templates.c  cgp_templates.h  cgp_utils.c  cgp_utils.h
templates/c/gtk/: .json  README.md  meson.build
templates/c/gtk/data/: desktop.in  gschema.xml  meson.build  metainfo.xml.in
templates/c/gtk/data/icons/: meson.build
templates/c/gtk/data/icons/hicolor/symbolic/apps/: svg
templates/c/gtk/po/: POTFILES.in  meson.build
templates/c/gtk/src/: application.c  application.h  gresource.xml  main.c  shortcuts.ui  window.c  window.h  window.ui
